--- a/style.css
+++ b/style.css
@@ -1,54 +1,46 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body {
-    width: 100vh;
-    height: 100vh;
-    background-color: black;
-    color: azure;
-    font-family: "Comic Neue", serif;
+    font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    }
-    .container {
-background-color: cadetblue;
-height: 300px;
-width: 400px;
-padding: 25px;
-border-radius: 20px;
+    height: 100vh;
+    background-color: #000000;
+    margin: 0;
+}
 
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 25px;
+.container {
+    display: flex;
+    align-items: center;
+    background: rgb(243, 219, 0);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
 
-    }
+.lebron-img {
+    width: 200px;
+    border-radius: 10px;
+    margin-right: 20px;
+}
 
-    .container_texto{
-        width: 200px;
-        height: 200px;
-        border: none;
-        padding: 10px;
-        border-radius: 8px;
-    }
+.bio {
+    max-width: 400px;
+}
 
-    .container_botao{
-        width: 150px;
-        padding: 5px;
-        border: none;
-        border-radius: 8px;
-        background-color: burlywood;
-    }
+.buttons {
+    margin-top: 10px;
+}
 
-    .container_botao:hover{
-        cursor: pointer;
-        background-color: blanchedalmond;
-    }
+button {
+    padding: 10px;
+    margin: 5px;
+    border: none;
+    background: #0073e6;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button:hover {
+    background: #005bb5;
+}
